Fix scroll bar issue on mobile

--- a/src/app/styles/animation.scss
+++ b/src/app/styles/animation.scss
@@ -66,7 +66,7 @@
     .word {
       transform: translateY(200%) scale(0);
       transform-origin: bottom right;
-      @for $i from 1 through 11 {
+      @for $i from 1 through 20 {
         &:nth-child(#{$i}) {
           transition:
             transform 0.8s ease-in-out 0.12s * $i,
@@ -162,6 +162,11 @@
         }
         &.init {
           opacity: 0.5;
+        }
+
+        &:hover {
+          transition: opacity 0.2s;
+          opacity: 0.75;
         }
       }
     }
